force-app/main/default/objects/Payment_Run_Line_Item__c/Payment_Run_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Payment Run Line Item</label>
    <nameField>
        <displayFormat>PRLI{000000}</displayFormat>
        <label>Payment Run Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Run Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>