force-app/main/default/objects/Payment_Run_Line_Item__c/fields/Payment_Run__c.field-meta.xml
<CustomField>
    <fullName>Payment_Run__c</fullName>
    <label>Payment Run</label>
    <referenceTo>Payment_Run__c</referenceTo>
    <relationshipLabel>Payment Run Line Items</relationshipLabel>
    <relationshipName>Payment_Run_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>