force-app/main/default/objects/Payment_Run_Line_Item__c/fields/Payment_Run_Purchase_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Run_Purchase_Invoice_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Payment Run Purchase Invoice Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>