force-app/main/default/objects/Payment_Run_Line_Item__c/fields/Purchase_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Invoice</label>
    <referenceTo>Zumzum__Purchase_Invoice__c</referenceTo>
    <relationshipLabel>Payment Run Line Items</relationshipLabel>
    <relationshipName>Payment_Run_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>