force-app/main/default/objects/Payment_Run_Line_Item__c/fields/Purchase_Invoice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Invoice_Due_Date__c</fullName>
    <formula>Purchase_Invoice__r.Zumzum__Invoice_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Invoice Due Date</label>
    <type>Date</type>
</CustomField>