force-app/main/default/objects/Payment_Run_Line_Item__c/fields/Purchase_Invoice_External_Reference__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Invoice_External_Reference__c</fullName>
    <formula>Purchase_Invoice__r.Zumzum__POP_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Invoice External Reference</label>
    <type>Text</type>
</CustomField>