force-app/main/default/objects/Payment_Run_Line_Item__c/fields/Purchase_Invoice_Supplier_Ban__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Invoice_Supplier_Ban__c</fullName>
    <formula>Purchase_Invoice__r.Zumzum__Account__r.Zumzum__Bank_Account_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Invoice Supplier BAN</label>
    <type>Text</type>
</CustomField>