force-app/main/default/objects/Payment_Run_Line_Item__c/fields/Purchase_Invoice_Supplier_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Invoice_Supplier_Sort_Code__c</fullName>
    <formula>Purchase_Invoice__r.Zumzum__Account__r.Zumzum__Bank_Sort_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Invoice Supplier Sort Code</label>
    <type>Text</type>
</CustomField>