force-app/main/default/objects/Payment_Run_Line_Item__c/fields/Purchase_Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Invoice_Type__c</fullName>
    <formula>TEXT(Purchase_Invoice__r.Zumzum__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Invoice Type</label>
    <type>Text</type>
</CustomField>