force-app/main/default/objects/Payment_Run_Line_Item__c/fields/Reference_Info__c.field-meta.xml
<CustomField>
    <fullName>Reference_Info__c</fullName>
    <formula>IF(NOT( ISBLANK(Purchase_Invoice__r.Zumzum__POP_Number__c) ), &#39;Your reference: &#39; + Purchase_Invoice__r.Zumzum__POP_Number__c + '. ', &#39;&#39;) +
&#39;Our reference: &#39; + Purchase_Invoice__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Info</label>
    <type>Text</type>
</CustomField>