force-app/main/default/objects/Payment_Run_Line_Item__c/fields/Supplier_Account_Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account_Billing_Email__c</fullName>
    <formula>Purchase_Invoice__r.Zumzum__Account__r.Billing_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Account Billing Email</label>
    <type>Text</type>
</CustomField>